<resources>
    <string name="app_name">Stock</string>
    <string name="retry">Retry</string>
    <string name="post_error">An error occurred while loading the posts</string>
    <string name="title_edit">Edit</string>
    <string name="title_add">Add</string>

    <string name="title_unit">Unit</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- unitMeasure -->
    <string name="unit_description">Description</string>
    <string name="unit_name">Name</string>

    <string name="unit_hint_name">Unit name</string>
    <string name="unit_hint_description">Unit Description</string>


    <string name="category_description">Description</string>
    <string name="category_name">Name</string>
    <string name="category_hint_name">Name</string>
    <string name="category_hint_description">Description</string>


    <string name="new_unit">New unitMeasure</string>
    <string name="title_category">Category</string>


    <string name="success_action">successfully</string>
    <string name="success_insert_action">create successfully</string>
    <string name="success_update_action">update successfully</string>
    <string name="submit_action">Submit</string>
    <string name="cancel_action">Cancel</string>
    <string name="result_not_found">Result not found.</string>


    <string name="title_activity_authen">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email_or_password">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">password</string>
    <string name="username_or_email">username or email</string>
    <string name="sign_in">Sign In</string>
    <string name="sig_up">Sign Up</string>
    <string name="please_wait">Please wait</string>

    <string name="error_connection_timeout">Connection time out</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="error_data_or_wifi_is_not_available">No Internet connection. Make sure that Wi-Fi or mobile data is turned on that try again</string>
    <string name="error_you_are_not_authorized_to_access">Sorry, You\'re not authorized to access this resource.</string>
    <string name="please_check_object_value">Please check object value</string>


    <string name="error_no_network_connection">Sorry, application does not yet support offline mode. Please, enable your network connection</string>
    <string name="error_not_found">Not Found</string>
    <string name="error_service_unavailable">Service Unavailable</string>
    <string name="error_http_exception">Http Exception</string>
    <string name="error_enable_gps">GPS is disabled</string>
    <string name="error_unauthorized">Unauthorized,Please login gain</string>
    <string name="error_internal_server_error">Internal Server Error</string>
    <string name="alert">Alert</string>
</resources>
