<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addeditcategory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.category.addedit.AddEditCategoryFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_username_or_email_edt"
                    style="@style/AppTheme.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/unit_hint_name"
                    android:nextFocusDown="@+id/input_password_edt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_password_edt"
                    style="@style/AppTheme.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/unit_hint_description"
                    android:imeOptions="actionDone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_username_or_email_edt" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel_btn"
                    style="@style/AppTheme.Button.Cancel"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cancel_action"
                    app:layout_constraintStart_toStartOf="@+id/input_password_edt"
                    app:layout_constraintTop_toBottomOf="@+id/input_password_edt" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submit_btn"
                    style="@style/AppTheme.Button.Submit"
                    android:layout_marginStart="8dp"
                    android:text="@string/submit_action"
                    app:layout_constraintEnd_toEndOf="@+id/input_password_edt"
                    app:layout_constraintTop_toBottomOf="@+id/input_password_edt" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
